# padurarbot

./: LICENSE  README.md
pad/: main.py  pyproject.toml
pad/cogs/: custom.py  economy.py  events.py  fun.py  help.py  imagini.py  info.py  kick-ban.py  rank.py  ready.py  setup.py  staff.py  utilitati.py
pad/data/: data.json  invites.json
pad/fisiere/: stafflogs.txt
pad/fisiere/warns/: _@626402185894166559_.txt  _@743483124033257482_.txt  _@817344249724272643_.txt
